--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:layout_marginEnd="16dp"
         android:background="@drawable/roundedbutton"
         android:onClick="loginButtonClick"
         android:text="Login"
@@ -61,6 +60,7 @@
         android:text="Sign Up"
         app:backgroundTint="@color/purpleButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/loginButton"
         app:layout_constraintTop_toBottomOf="@+id/userPassword" />
 
     <EditText
