Fixed login screen and all buttons, need to update player hubs and link reset buttons??

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,7 @@
         android:background="@drawable/roundedbutton"
         android:onClick="loginButtonClick"
         android:text="Login"
+        android:textColor="@color/whiteButton"
         app:backgroundTint="@color/purpleButton"
         app:layout_constraintEnd_toStartOf="@+id/signUpButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,6 +59,7 @@
         android:background="@drawable/roundedbutton"
         android:onClick="signUp"
         android:text="Sign Up"
+        android:textColor="@color/whiteButton"
         app:backgroundTint="@color/purpleButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/loginButton"
