--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,6 +23,7 @@
             android:background="@drawable/roundedbutton"
             android:onClick="launchLocalGame"
             android:text="Local Multiplayer"
+            android:textColor="@color/whiteButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +36,7 @@
             android:onClick="launchOnline"
             android:text="Online Multiplayer"
             android:background="@drawable/roundedbutton"
+            android:textColor="@color/whiteButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/localMultiplayer" />
@@ -47,6 +49,7 @@
             android:onClick="launchBots"
             android:text="Solo Training"
             android:background="@drawable/roundedbutton"
+            android:textColor="@color/whiteButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/onlineMultiplayer" />
@@ -59,6 +62,7 @@
             android:onClick="signOut"
             android:text="Sign Out"
             android:background="@drawable/roundedbutton"
+            android:textColor="@color/whiteButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/soloTraining" />
@@ -73,6 +77,7 @@
         android:layout_marginTop="12dp"
         android:text="username"
         android:textColor="@color/white"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
