Created Bot Lobby and started generating functions and removing database references

--- a/app/src/main/res/layout/bot_lobby.xml
+++ b/app/src/main/res/layout/bot_lobby.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".OnlineLobby">
+    tools:context=".BotLobby">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/userInfo"
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            android:text="@string/max_players"
+            android:text="Max Players:"
             android:textColor="@color/whiteButton"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/plus"
@@ -151,8 +151,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
-                android:onClick="sendRequest"
-                android:text="@string/send"
+                android:onClick="humanPlayer"
+                android:text="@string/human"
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintStart_toEndOf="@+id/player1Username"
@@ -166,8 +166,8 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
                 android:backgroundTint="@color/purpleButton"
-                android:onClick="acceptRequest"
-                android:text="@string/accept"
+                android:onClick="generateBot"
+                android:text="@string/bot"
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -241,8 +241,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
-                android:onClick="sendRequest"
-                android:text="@string/send"
+                android:onClick="humanPlayer"
+                android:text="@string/human"
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintStart_toEndOf="@+id/player2Username"
@@ -255,8 +255,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
-                android:onClick="acceptRequest"
-                android:text="@string/accept"
+                android:onClick="generateBot"
+                android:text="@string/bot"
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -330,8 +330,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
-                android:onClick="sendRequest"
-                android:text="@string/send"
+                android:onClick="humanPlayer"
+                android:text="@string/human"
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintStart_toEndOf="@+id/player3Username"
@@ -344,8 +344,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
-                android:onClick="acceptRequest"
-                android:text="@string/accept"
+                android:onClick="generateBot"
+                android:text="@string/bot"
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -419,8 +419,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
-                android:onClick="sendRequest"
-                android:text="@string/send"
+                android:onClick="humanPlayer"
+                android:text="@string/human"
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintStart_toEndOf="@+id/player4Username"
@@ -433,8 +433,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
-                android:onClick="acceptRequest"
-                android:text="@string/accept"
+                android:onClick="generateBot"
+                android:text="@string/bot"
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -460,7 +460,7 @@
             android:layout_marginStart="32dp"
             android:background="@drawable/roundedbutton"
             android:onClick="confirmGameDetails"
-            android:text="@string/confirm"
+            android:text="Confirm"
             android:textColor="@color/whiteButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -472,7 +472,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
             android:onClick="clearButton"
-            android:text="@string/clear_invites"
+            android:text=" Clear Invites"
             android:textColor="@color/whiteButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/confirmOnline"
@@ -496,7 +496,7 @@
             android:layout_marginStart="32dp"
             android:background="@drawable/roundedbutton"
             android:onClick="playOnline"
-            android:text="@string/play"
+            android:text="Play"
             android:textColor="@color/whiteButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
