--- a/app/src/main/res/layout/bot_lobby.xml
+++ b/app/src/main/res/layout/bot_lobby.xml
@@ -103,7 +103,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/p1Request">
+                app:layout_constraintTop_toBottomOf="@+id/p1Human">
 
                 <View
                     android:id="@+id/p1BigSquare"
@@ -147,7 +147,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/p1Request"
+                android:id="@+id/p1Human"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
@@ -159,7 +159,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/p1Accept"
+                android:id="@+id/p1Bot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -171,7 +171,7 @@
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/p1Request"
+                app:layout_constraintStart_toEndOf="@+id/p1Human"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -192,7 +192,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/p2Request">
+                app:layout_constraintTop_toBottomOf="@+id/p2Human">
 
                 <View
                     android:id="@+id/p2BigSquare"
@@ -237,7 +237,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/p2Request"
+                android:id="@+id/p2Human"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
@@ -249,7 +249,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/p2Accept"
+                android:id="@+id/p2Bot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -260,7 +260,7 @@
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/p2Request"
+                app:layout_constraintStart_toEndOf="@+id/p2Human"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -281,7 +281,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/p3Request">
+                app:layout_constraintTop_toBottomOf="@+id/p3Human">
 
                 <View
                     android:id="@+id/p3BigSquare"
@@ -326,7 +326,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/p3Request"
+                android:id="@+id/p3Human"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
@@ -338,7 +338,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/p3Accept"
+                android:id="@+id/p3Bot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -349,7 +349,7 @@
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/p3Request"
+                app:layout_constraintStart_toEndOf="@+id/p3Human"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -370,7 +370,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/p4Request">
+                app:layout_constraintTop_toBottomOf="@+id/p4Human">
 
                 <View
                     android:id="@+id/p4BigSquare"
@@ -415,7 +415,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/p4Request"
+                android:id="@+id/p4Human"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
@@ -427,7 +427,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/p4Accept"
+                android:id="@+id/p4Bot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -438,14 +438,14 @@
                 android:textSize="12sp"
                 android:textColor="@color/whiteButton"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/p4Request"
+                app:layout_constraintStart_toEndOf="@+id/p4Human"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/confirmAndClearHub"
+        android:id="@+id/confirmAndClearHubBots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -480,7 +480,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/playHub"
+        android:id="@+id/playHubBots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
@@ -495,7 +495,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:background="@drawable/roundedbutton"
-            android:onClick="playOnline"
+            android:onClick="playBots"
             android:text="Play"
             android:textColor="@color/whiteButton"
             app:layout_constraintBottom_toBottomOf="parent"
