--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_height="40dp"
             android:background="@drawable/roundedbutton"
             android:gravity="center"
-            android:onClick="resetBoard"
+            android:onClick="resetButton"
             android:padding="0dp"
             android:text="RESTART"
             android:textColor="@color/whiteButton"
@@ -127,7 +127,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/roundedbutton"
-        android:onClick="resetBoard"
+        android:onClick="resetButton"
         android:text="RESET"
         android:textColor="@color/whiteButton"
         android:textSize="24sp"
